--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     <h3>Lee Donahoe</h3>
     <h3>Nick Merwin</h3>
     <p>
+      HTML was created by the orginal "web developer", computer scientist
+      <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee"> Tim Berners-Lee</a>
+      It's not true that Sir Tim invented Html in order to share pictures of his cat,
+      but it would be cool if it were.
+    </p>
+
+    <p>
       <img src="images/kitten.jpg" alt="An adorable kitten">
       <img src="images/kitten.jpg" alt="An adorable kitten">
       <img src="http://example.com/images/kitten.jpg" alt="An adorable kitten">
