--- a/tags.html
+++ b/tags.html
@@ -5,8 +5,16 @@
     <meta charset="utf-8">
   </head>
   <body>
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML</a>
+    </div>
+
     <h1>Important info goes here</h1>
     <img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper">
+
     <p>
       This page is designed as a quick reference for some of the common tags
       covered in <a href="http://learnenough.com/html-tutorial"><em>Learn
