--- a/moby_dick.html
+++ b/moby_dick.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <header style="text-align: center; margin: 0 0 80px;">
     <title>Moby Dick</title>
     <meta charset="utf-8">
   </head>
   <body>
 
-    <div>
+    <div style="text-align: right;">
       <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px">Moby Dick</a>
+      <a href="tags.html" style="margin: 0 0 0 10px">HTML Tags</a>
     </div>
 
-    <!-- much here to be styled, will do in next section -->
     <header>
-      <h1>A softcover Book Report</h1>
-      <h2>Moby-Dick (or, The Whale)</h2>
+      <h1 style="text-align: center;">A softcover Book Report</h1>
+      <h2 style="text-align: center;">Moby-Dick (or, The Whale)</h2>
     </header>
 
     <div>
@@ -31,36 +30,39 @@
         American literature.
       </p>
     </div>
-
+    <div style="width: 500px; margin: 20px auto; padding: 30px;
+      background-color: #fafafa;">
     <h3>Moby-Dick: A classic tale of the sea</h3>
 
-    a href="https://www.softcover.io/read/6070fb03/moby-dick">
-         target="_blank">
-        <img src="images/moby_dick.png" alt="Moby Dick">
-      </a>
 
       <p>
         <a href="https://www.softcover.io/read/6070fb03/moby-dick">
-           target="_blank">
+          <img src="images/moby_dick.png" alt="Moby Dick" height="200px"
+       style="float: left; margin: 0px 40px 0px 0px;">
           <em>Moby-Dick</em></a>
           by Herman Melville begins with these immortal words:
       </p>
 
-      <blockquote>
+      <blockquote style="font-style: italic; font-size: 20px;">
         <p>
-          <span>Call me Ishmael.</span> Some years ago–never mind how long
+          <span style="font-style: normal; font-size: 24px; font-weight: bold;
+          color: #ff0000;">Call me Ishmael.</span> Some years ago–never mind how long
             precisely–having little or no money in my purse, and nothing
             particular to interest me on shore, I thought I would sail about a
             little and see the watery part of the world. It is a way I have of
             driving off the spleen and regulating the circulation.
         </p>
-
+      </blockquote>
         <p>
         After driving off his spleen (which <em>can't</em> be good for you),
         Ishmael then goes on in much the same vein for approximately one
         jillion pages. The only thing bigger than Moby Dick (who—<em>spoiler
         alert!</em>—is a giant white whale) is the book itself.
       </p>
+
+     <p>
+     <br>
+     <br
 
       <h4>My top 3 favorite things about Moby Dick</h4>
 
@@ -69,7 +71,7 @@
         <li>Salty sailors</li>
         <li>The names "Queequeg" and "Starbuck"</li>
       </ol>
-
+    </p>
       <h4>Other things about Moby Dick</h4>
 
       <ul>
